@@ -10,6 +10,7 @@ Cleanup
 - cleanup common hash into "data" and put in data.c??
 - debug around all the checks
 - cleanup module loading stuff
+- new module documentation
 
 Audit
 - code review to reduce memory footprint
